Fix invisible start menu issue

--- a/Frontend/src/System/StartMenu/startMenu.css
+++ b/Frontend/src/System/StartMenu/startMenu.css
@@ -14,6 +14,7 @@
 .startMenu.hidden{
   opacity: 0;
   height: 50%;
+  pointer-events: none;
 }
 
 
